--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "50f678a2-0400-43c3-866b-ad1c75f34191",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bc3b11a0-c064-4961-b2d5-f3af046757ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1b643050-21fd-4c15-a096-c5c4bbec6296",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +143,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "738c4ac6-e88a-4e48-aebd-178cbdf5c9e9",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +471,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "10cb28a2-3196-49e3-86a2-a886cd94ae4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +480,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0b5aa3e4-f201-4a7f-842c-5bbe386ced5d",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +569,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c97386bf-4092-42a0-967b-b5d7156a33d9",
    "metadata": {},
    "source": [
     "### Preprocssing Text\n",
@@ -588,7 +581,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26ec56f7-88ec-4abf-9672-660a3b934c8f",
    "metadata": {},
    "source": [
     "### logistics regression\n"
@@ -597,7 +589,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e075ed6e-309b-4576-abc4-6e3c331203b1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -605,7 +596,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
