addadd note for preprocessing

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "50f678a2-0400-43c3-866b-ad1c75f34191",
    "metadata": {},
    "outputs": [],
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "bc3b11a0-c064-4961-b2d5-f3af046757ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_demo_profiles_path = './final_project/data/User demo profiles.json'\n",
-    "labeled_tweets_path = './final_project/data/Twitter_User_Handles_labeled_tweets.json'\n",
-    "labeled_users = './final_project/data/labeled_users.csv'\n",
+    "user_demo_profiles_path = './data/User demo profiles.json'\n",
+    "labeled_tweets_path = './data/Twitter_User_Handles_labeled_tweets.json'\n",
+    "labeled_users = './data/labeled_users.csv'\n",
     "\n",
     "df_tweets = pd.read_json(labeled_tweets_path, orient='index')\n",
     "df_profiles = pd.read_json(user_demo_profiles_path, orient='values')"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "1b643050-21fd-4c15-a096-c5c4bbec6296",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "4  profile pics/60151.jpeg  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "738c4ac6-e88a-4e48-aebd-178cbdf5c9e9",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "[5 rows x 100 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "10cb28a2-3196-49e3-86a2-a886cd94ae4d",
    "metadata": {},
    "outputs": [],
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "0b5aa3e4-f201-4a7f-842c-5bbe386ced5d",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        "4  755531.0        0.0     1982.0   4.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,6 +579,7 @@
    "metadata": {},
    "source": [
     "### Preprocssing Text\n",
+    "根据df_user里的user_id去df_tweets找到对应user的100条tweets，然后对tweets做如下preprocessing\n",
     "- remove urls\n",
     "- remove @user\n",
     "- all lowercase?\n",
@@ -587,12 +588,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5457952b-f5b2-4c8c-8cb4-302b6af03950",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "26ec56f7-88ec-4abf-9672-660a3b934c8f",
    "metadata": {},
    "source": [
-    "### logistics regression\n"
+    "### logistics regression\n",
+    "有preprocess 好的tweet 可想想有什么可以拿出来的features（number of words 或其他）加上is_female, year_born 做logistics regression\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd5e7793-23d2-4845-a1f4-9ea93aec8997",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
