add preprocess for pics_lables

--- a/removeAddtionalImage.ipynb
+++ b/removeAddtionalImage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "[3609 rows x 6 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,106 +217,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13981312 profile pics/60239.jpeg\n",
-      "15810975 profile pics/60316.jpeg\n",
-      "16239701 profile pics/60338.jpeg\n",
-      "17481031 profile pics/60390.jpeg\n",
-      "18693062 profile pics/60442.jpeg\n",
-      "18701876 profile pics/60443.jpeg\n",
-      "18888658 profile pics/60452.jpeg\n",
-      "23223898 profile pics/60561.jpeg\n",
-      "23772938 profile pics/60590.jpeg\n",
-      "27956258 profile pics/60698.jpeg\n",
-      "30098713 profile pics/60756.jpeg\n",
-      "36509410 profile pics/60878.jpeg\n",
-      "37071176 profile pics/60887.jpeg\n",
-      "44191726 profile pics/60985.jpeg\n",
-      "61668553 profile pics/61127.jpeg\n",
-      "62990956 profile pics/61136.jpeg\n",
-      "65802548 profile pics/61153.jpeg\n",
-      "71723098 profile pics/61204.jpeg\n",
-      "82359573 profile pics/61282.jpeg\n",
-      "95299054 profile pics/61353.jpeg\n",
-      "123027374 profile pics/61464.jpeg\n",
-      "123395194 profile pics/61465.jpeg\n",
-      "124236002 profile pics/61468.jpeg\n",
-      "124714713 profile pics/61471.jpeg\n",
-      "153595733 profile pics/61568.jpeg\n",
-      "154343441 profile pics/61571.jpeg\n",
-      "159957735 profile pics/61593.jpeg\n",
-      "167669892 profile pics/61626.jpeg\n",
-      "185638332 profile pics/61678.jpeg\n",
-      "196867688 profile pics/61718.jpeg\n",
-      "205587937 profile pics/61739.jpeg\n",
-      "222264347 profile pics/61785.jpeg\n",
-      "228247078 profile pics/61797.jpeg\n",
-      "238704779 profile pics/61822.jpeg\n",
-      "243914308 profile pics/61840.jpeg\n",
-      "246036103 profile pics/61856.jpeg\n",
-      "259199391 profile pics/61907.jpeg\n",
-      "329471635 profile pics/62114.jpeg\n",
-      "347576698 profile pics/62180.jpeg\n",
-      "348614130 profile pics/62185.jpeg\n",
-      "377294210 profile pics/62270.jpeg\n",
-      "377685390 profile pics/62272.jpeg\n",
-      "390390104 profile pics/62306.jpeg\n",
-      "399386737 profile pics/62333.jpeg\n",
-      "432178397 profile pics/62419.jpeg\n",
-      "444617649 profile pics/62439.jpeg\n",
-      "454481737 profile pics/62462.jpeg\n",
-      "517950064 profile pics/62574.jpeg\n",
-      "522333071 profile pics/62584.jpeg\n",
-      "597034522 profile pics/62746.jpeg\n",
-      "707305184 profile pics/62810.jpeg\n",
-      "824096078 profile pics/62926.jpeg\n",
-      "830160776 profile pics/62930.jpeg\n",
-      "897367644 profile pics/62988.jpeg\n",
-      "947071700 profile pics/63017.jpeg\n",
-      "960968348 profile pics/63025.jpeg\n",
-      "1209078512 profile pics/63154.jpeg\n",
-      "1243191068 profile pics/63171.jpeg\n",
-      "1455116664 profile pics/63256.jpeg\n",
-      "1463261726 profile pics/63260.jpeg\n",
-      "1475671686 profile pics/63267.jpeg\n",
-      "1658356795 profile pics/63363.jpeg\n",
-      "1672833529 profile pics/63368.jpeg\n",
-      "1905102073 profile pics/63423.jpeg\n",
-      "2200747690 profile pics/63482.jpeg\n",
-      "2224032653 profile pics/63498.jpeg\n",
-      "2245074192 profile pics/63511.jpeg\n",
-      "2287323518 profile pics/63547.jpeg\n",
-      "2358309367 profile pics/63604.jpeg\n",
-      "2421123722 profile pics/63648.jpeg\n",
-      "2596620258 profile pics/63756.jpeg\n",
-      "2798534959 profile pics/63846.jpeg\n",
-      "2799285827 profile pics/63848.jpeg\n",
-      "2903967022 profile pics/63916.jpeg\n",
-      "2920350729 profile pics/63932.jpeg\n",
-      "3000034679 profile pics/63962.jpeg\n",
-      "3008982077 profile pics/63967.jpeg\n",
-      "3285507262 profile pics/64089.jpeg\n",
-      "3290827158 profile pics/64091.jpeg\n",
-      "3378184781 profile pics/64131.jpeg\n",
-      "3427249923 profile pics/64148.jpeg\n",
-      "3621133637 profile pics/64169.jpeg\n",
-      "3784568652 profile pics/64177.jpeg\n",
-      "4685486839 profile pics/64241.jpeg\n",
-      "4764176880 profile pics/64247.jpeg\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(3609, 2)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df_tmp = df_profiles.drop(['name','screen_name','description','lang'],axis = 1)\n",
-    "\n",
+    "df_tmp.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "not_find_pics = []\n",
     "for index, row in df_tmp.iterrows():\n",
-    "    id = row[0]\n",
+    "    _id = row[0]\n",
     "    path = row[1]\n",
     "    source_path = './data/img' + path[12:]\n",
     "    dest_path = './data/' + path\n",
@@ -324,7 +252,7 @@
     "    try:\n",
     "        shutil.copyfile(source_path,dest_path)\n",
     "    except(FileNotFoundError):\n",
-    "        print(id,path)"
+    "        not_find_pics.append(index)"
    ]
   }
  ],
