--- a/preprocess_for_pics_lables.ipynb
+++ b/preprocess_for_pics_lables.ipynb
@@ -301,7 +301,7 @@
    "hash": "0f75978233c496711d8b6fbaac206609b5c6c1b124626415f694fad520d3d3bd"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.11 64-bit ('cs640': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -315,10 +315,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
-  },
-  "orig_nbformat": 4
+   "version": "3.7.6"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
