--- a/age_prediction_image/custom_resnet34.ipynb
+++ b/age_prediction_image/custom_resnet34.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -117,7 +117,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing\n",
+    "## Age prediction\n",
+    "### Preprocessing\n",
     "    We use the dataset UTKFace to train our database, the data set contains totally 23708 images, we randomly select 2708 of them as validation set, 500 of them as test set. The name of each image already contains the label info of the image: the format of the label is [age]_[gender]_[race]_[date&time].jpg.\n",
     "    In the preprocessing, we do:\n",
     "    1. Read the image and turn them into rgb.\n",
@@ -225,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train the model\n",
+    "### Train the model\n",
     "    Besides training the model, we also use the test set to see the performance of the model"
    ]
   },
@@ -319,8 +320,6 @@
     }
    ],
    "source": [
-    "# TODO: should we nnormalize the image vectors?\n",
-    "\n",
     "num_epochs = 32\n",
     "learning_rate = 0.001\n",
     "batch_size = 32\n",
@@ -397,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predict on the twitter user profile\n",
+    "### Predict on the twitter user profile\n",
     "    Below we will run the age prediction on the first batch of the twitter user profile image.\n",
     "    The preprocess steps are same as what have been down to the training set."
    ]
@@ -460,7 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predict on the second user profile set"
+    "### Predict on the second user profile set\n"
    ]
   },
   {
@@ -516,6 +515,377 @@
     "results = tf.argmax(prediction_prob, axis=1)\n",
     "print(metrics.accuracy_score(test_labels1, results))\n",
     "print(classification_report(y_true=test_labels1,y_pred=results))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Race prediction\n",
+    "### Preprocessing\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10346\n",
+      "10346\n",
+      "100\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import cv2\n",
+    "\n",
+    "from imutils import paths\n",
+    "\n",
+    "\n",
+    "image_original_folder = \"../resource/UTKFace_filtered/\"\n",
+    "image_paths = list(paths.list_images(image_original_folder))\n",
+    "\n",
+    "test_set_size = 100 # There are total 23708 images in UTKFace, so this should not exceed 23708\n",
+    "non_training_data = random.sample(range(0, 10446), test_set_size)\n",
+    "test_indexes = set(non_training_data)\n",
+    "\n",
+    "train_set = []\n",
+    "train_labels = []\n",
+    "test_set = []\n",
+    "test_labels = []\n",
+    "for (i, imagePath) in enumerate(image_paths):\n",
+    "    if i in test_indexes:\n",
+    "        added_set = test_set\n",
+    "        added_labels = test_labels\n",
+    "    else:\n",
+    "        added_set = train_set\n",
+    "        added_labels = train_labels\n",
+    "    # the format of the label is [age]_[gender]_[race]_[date&time].jpg,\n",
+    "    # here only age and race are needed\n",
+    "    labels = imagePath.split(\"/\")[-1].split(\".\")[0].split(\"_\")\n",
+    "    if len(labels) != 4:\n",
+    "        # few images in the UTKFace have broken labels, ignore them\n",
+    "        continue\n",
+    "    \n",
+    "    # In UTKFace, there are 4 races, but in our twitter data, there are 5 races, to reach an agreement, here we unify the \n",
+    "    # standard:\n",
+    "    # 0---White, so for twitter dataset, we need to change 4 to 0\n",
+    "    # 1---Black, there is no change needed\n",
+    "    # 2---Asian, for twitter dataset, we need to change 3 to 2\n",
+    "    # 3---Other, including: Latino/Hispanic/Indian and so on. So for twitter dataset, we need to change 2, 5 to 3; for UTKFace\n",
+    "    # dataset, we need to change 4 to 3.\n",
+    "    labels = [int(labels[2])]\n",
+    "    if labels[0] == 4:\n",
+    "        labels[0] = labels[0] - 1\n",
+    "    label = labels[0]\n",
+    "    image = cv2.imread(imagePath)\n",
+    "    added_set.append(image)\n",
+    "    added_labels.append(label)\n",
+    "\n",
+    "print(len(train_set))\n",
+    "print(len(train_labels))\n",
+    "print(len(test_set))\n",
+    "print(len(test_labels))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "# shuffle the train data\n",
+    "train_XY = list(zip(train_set, train_labels))\n",
+    "random.shuffle(train_XY)\n",
+    "\n",
+    "train_set, train_labels = zip(*train_XY)\n",
+    "train_set = list(train_set)\n",
+    "train_labels = list(train_labels)\n",
+    "\n",
+    "# normalize the data image\n",
+    "train_set = np.array(train_set)\n",
+    "train_labels = np.array(train_labels)\n",
+    "test_set = np.array(test_set)\n",
+    "test_labels = np.array(test_labels)\n",
+    "normed_train_set = train_set/255\n",
+    "normed_test_set = test_set/255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This part is preprocessing for twitter dataset\n",
+    "\n",
+    "profile0_folder = \"../resource/cropped_profile/\"\n",
+    "image_paths = list(paths.list_images(profile0_folder))\n",
+    "\n",
+    "test_set0 = []\n",
+    "test_labels0 = []\n",
+    "for (i, imagePath) in enumerate(image_paths):\n",
+    "    # the format of the label is [age]_[race]_[id].jpeg,\n",
+    "    # here only age and race are needed\n",
+    "    labels = imagePath.split(\"/\")[-1].split(\".\")[0].split(\"_\")\n",
+    "    if len(labels) != 3:\n",
+    "        # few images in the UTKFace have broken labels, ignore them\n",
+    "        continue\n",
+    "    labels = [int(labels[1])]\n",
+    "    if labels[0] == 4:\n",
+    "        labels[0] = 0\n",
+    "    elif labels[0] == 3:\n",
+    "        labels[0] = 2\n",
+    "    elif labels[0] == 2 or labels[0] == 5:\n",
+    "        labels[0] = 3\n",
+    "    label = labels[0]\n",
+    "    image = cv2.imread(imagePath)\n",
+    "    test_set0.append(image)\n",
+    "    test_labels0.append(label)\n",
+    "\n",
+    "test_set0 = np.array(test_set0)\n",
+    "test_labels0 = np.array(test_labels0)\n",
+    "normed_test_set0 = test_set0/255"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/64\n",
+      "324/324 [==============================] - 34s 103ms/step - loss: 1.2877 - accuracy: 0.4361\n",
+      "Epoch 2/64\n",
+      "324/324 [==============================] - 34s 103ms/step - loss: 1.2464 - accuracy: 0.4834\n",
+      "Epoch 3/64\n",
+      "324/324 [==============================] - 34s 104ms/step - loss: 1.2260 - accuracy: 0.5038\n",
+      "Epoch 4/64\n",
+      "324/324 [==============================] - 34s 104ms/step - loss: 1.2048 - accuracy: 0.5273\n",
+      "Epoch 5/64\n",
+      "324/324 [==============================] - 34s 104ms/step - loss: 1.1874 - accuracy: 0.5459\n",
+      "Epoch 6/64\n",
+      "324/324 [==============================] - 34s 104ms/step - loss: 1.1565 - accuracy: 0.5853\n",
+      "Epoch 7/64\n",
+      "324/324 [==============================] - 34s 103ms/step - loss: 1.1295 - accuracy: 0.6116\n",
+      "Epoch 8/64\n",
+      "324/324 [==============================] - 34s 103ms/step - loss: 1.0967 - accuracy: 0.6482\n",
+      "Epoch 9/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 1.0589 - accuracy: 0.6881\n",
+      "Epoch 10/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 1.0260 - accuracy: 0.7247\n",
+      "Epoch 11/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.9972 - accuracy: 0.7572\n",
+      "Epoch 12/64\n",
+      "324/324 [==============================] - 34s 103ms/step - loss: 0.9685 - accuracy: 0.7889\n",
+      "Epoch 13/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.9433 - accuracy: 0.8180\n",
+      "Epoch 14/64\n",
+      "324/324 [==============================] - 34s 104ms/step - loss: 0.9212 - accuracy: 0.8414\n",
+      "Epoch 15/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.9013 - accuracy: 0.8631\n",
+      "Epoch 16/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.8839 - accuracy: 0.8815\n",
+      "Epoch 17/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.8657 - accuracy: 0.8977\n",
+      "Epoch 18/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.8521 - accuracy: 0.9125\n",
+      "Epoch 19/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.8441 - accuracy: 0.9184\n",
+      "Epoch 20/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.8320 - accuracy: 0.9310\n",
+      "Epoch 21/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.8249 - accuracy: 0.9364\n",
+      "Epoch 22/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.8168 - accuracy: 0.9427\n",
+      "Epoch 23/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.8095 - accuracy: 0.9489\n",
+      "Epoch 24/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.8042 - accuracy: 0.9523\n",
+      "Epoch 25/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7986 - accuracy: 0.9564\n",
+      "Epoch 26/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7951 - accuracy: 0.9589\n",
+      "Epoch 27/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7927 - accuracy: 0.9614\n",
+      "Epoch 28/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7920 - accuracy: 0.9623\n",
+      "Epoch 29/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7883 - accuracy: 0.9642\n",
+      "Epoch 30/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7869 - accuracy: 0.9655\n",
+      "Epoch 31/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7828 - accuracy: 0.9676\n",
+      "Epoch 32/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7817 - accuracy: 0.9696\n",
+      "Epoch 33/64\n",
+      "324/324 [==============================] - 34s 104ms/step - loss: 0.7792 - accuracy: 0.9705\n",
+      "Epoch 34/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7773 - accuracy: 0.9719\n",
+      "Epoch 35/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7776 - accuracy: 0.9716\n",
+      "Epoch 36/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7758 - accuracy: 0.9730\n",
+      "Epoch 37/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7755 - accuracy: 0.9731\n",
+      "Epoch 38/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7734 - accuracy: 0.9750\n",
+      "Epoch 39/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7725 - accuracy: 0.9758\n",
+      "Epoch 40/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7724 - accuracy: 0.9759\n",
+      "Epoch 41/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7707 - accuracy: 0.9769\n",
+      "Epoch 42/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7718 - accuracy: 0.9759\n",
+      "Epoch 43/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7700 - accuracy: 0.9781\n",
+      "Epoch 44/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7698 - accuracy: 0.9773\n",
+      "Epoch 45/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7692 - accuracy: 0.9781\n",
+      "Epoch 46/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7685 - accuracy: 0.9785\n",
+      "Epoch 47/64\n",
+      "324/324 [==============================] - 34s 103ms/step - loss: 0.7687 - accuracy: 0.9786\n",
+      "Epoch 48/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7684 - accuracy: 0.9789\n",
+      "Epoch 49/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7676 - accuracy: 0.9795\n",
+      "Epoch 50/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7665 - accuracy: 0.9801\n",
+      "Epoch 51/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7666 - accuracy: 0.9798\n",
+      "Epoch 52/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7653 - accuracy: 0.9808\n",
+      "Epoch 53/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7654 - accuracy: 0.9806\n",
+      "Epoch 54/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7648 - accuracy: 0.9812\n",
+      "Epoch 55/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7647 - accuracy: 0.9813\n",
+      "Epoch 56/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7649 - accuracy: 0.9810\n",
+      "Epoch 57/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7648 - accuracy: 0.9812\n",
+      "Epoch 58/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7642 - accuracy: 0.9816\n",
+      "Epoch 59/64\n",
+      "324/324 [==============================] - 34s 104ms/step - loss: 0.7640 - accuracy: 0.9826\n",
+      "Epoch 60/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7638 - accuracy: 0.9821\n",
+      "Epoch 61/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7629 - accuracy: 0.9829\n",
+      "Epoch 62/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7634 - accuracy: 0.9827\n",
+      "Epoch 63/64\n",
+      "324/324 [==============================] - 33s 103ms/step - loss: 0.7625 - accuracy: 0.9831\n",
+      "Epoch 64/64\n",
+      "150/324 [============>.................] - ETA: 17s - loss: 0.7626 - accuracy: 0.9827"
+     ]
+    }
+   ],
+   "source": [
+    "num_epochs = 64\n",
+    "learning_rate = 0.001\n",
+    "batch_size = 32\n",
+    "model = ResNet34(shape = (200, 200, 3) ,classes=4)\n",
+    "model.compile(optimizer=tf.keras.optimizers.SGD(learning_rate=tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "                    initial_learning_rate=learning_rate, decay_steps=num_epochs*100, decay_rate=0.9)), \n",
+    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "              metrics=[tf.keras.metrics.SparseCategoricalAccuracy('accuracy')])\n",
+    "model.fit(normed_train_set, train_labels, epochs=num_epochs, batch_size=batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.73\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.77      0.81        44\n",
+      "           1       0.73      0.73      0.73        15\n",
+      "           2       0.62      0.93      0.74        14\n",
+      "           3       0.62      0.56      0.59        27\n",
+      "\n",
+      "    accuracy                           0.73       100\n",
+      "   macro avg       0.71      0.75      0.72       100\n",
+      "weighted avg       0.74      0.73      0.73       100\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "prediction_prob = model.predict(normed_test_set)\n",
+    "results = tf.argmax(prediction_prob, axis=1)\n",
+    "print(metrics.accuracy_score(test_labels, results))\n",
+    "print(classification_report(y_true=test_labels,y_pred=results))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict for twitter users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5466365178066704\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.60      0.71      1423\n",
+      "           1       0.20      0.40      0.26       134\n",
+      "           2       0.05      0.09      0.07        53\n",
+      "           3       0.13      0.35      0.19       159\n",
+      "\n",
+      "    accuracy                           0.55      1769\n",
+      "   macro avg       0.32      0.36      0.31      1769\n",
+      "weighted avg       0.74      0.55      0.61      1769\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction_prob = model.predict(normed_test_set0)\n",
+    "results = tf.argmax(prediction_prob, axis=1)\n",
+    "print(metrics.accuracy_score(test_labels0, results))\n",
+    "print(classification_report(y_true=test_labels0,y_pred=results))"
    ]
   },
   {
