inor change on tweet preprocess data

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1719,9 +1719,143 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "aa395c38-448a-463d-a133-c4528527404f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Concaternate 0-99 text column into one\n",
+    "import pandas as pd\n",
+    "\n",
+    "race_df = pd.read_csv('./data/preprocessed_race_tweets.csv')\n",
+    "\n",
+    "race_dict = {}\n",
+    "race_dict['text'] = race_df['0'].to_list()\n",
+    "race_dict['label'] = race_df['race'].to_list() * 100\n",
+    "race_dict['user_id'] = race_df['user_id'].to_list() * 100\n",
+    "\n",
+    "for col in range(1, 100):\n",
+    "    race_dict['text'] += race_df[str(col)].to_list()\n",
+    "    \n",
+    "race_df = pd.DataFrame.from_dict(race_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8763c7f6-ec87-4fba-b0d9-cb9c03edf8ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14145\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "289119"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## drop nan \n",
+    "import re\n",
+    "import numpy as np\n",
+    "\n",
+    "race_df.dropna(subset=['text'], inplace=True)\n",
+    "\n",
+    "str_ls = []\n",
+    "for s in race_df['text']:\n",
+    "    temp = re.sub('None', '', s)\n",
+    "    str_ls.append(temp)\n",
+    "    \n",
+    "race_df['text'] = str_ls\n",
+    "\n",
+    "race_df['text'] = race_df['text'].replace(r'^\\s*$', np.NaN, regex=True)\n",
+    "\n",
+    "print(race_df['text'].isna().sum())\n",
+    "\n",
+    "race_df.dropna(subset=['text'], inplace=True)\n",
+    "len(race_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f1376214-3b42-4d63-adcb-459ad6c378df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0    224287\n",
+       "1.0     26269\n",
+       "2.0     16292\n",
+       "5.0     10365\n",
+       "3.0      9189\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "race_df['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "55bd723f-b4e7-4273-b69a-c31a022da6ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "276037"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "race_df.loc[:, 'label'] = np.where(\n",
+    "   (race_df['label'] == 5), np.nan, race_df['label']\n",
+    "   )\n",
+    "\n",
+    "race_df.dropna(inplace=True)\n",
+    "len(race_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c66c5ab6-d82f-4e74-a003-ededafc49f1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_df.to_csv(\"./data/preprocessed_race_tweets.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "45bd37cc-1d8e-4160-a603-0c04c2abf6df",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### Merge all 100 tweets into one column"
    ]
@@ -1781,7 +1915,10 @@
   {
    "cell_type": "markdown",
    "id": "efecda7f-671d-4f05-9d6a-ac5171cbe5be",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### remove None in `all_tweets`"
    ]
@@ -3734,8 +3871,6 @@
     "# merge all tweets into one column \n",
     "df_tweets['all_tweets'] = df_tweets[[i for i in range(100)]].agg(' '.join, axis=1)\n",
     "\n",
-    "# drop column 0 to 99\n",
-    "# df_tweets = df_tweets.drop(columns = list(range(100)))\n",
     "df_tweets "
    ]
   },
@@ -4278,13 +4413,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_df.to_csv(\"./data/preprocessed_tweets_with_for_age_pred.csv\")"
+    "# merge_df.to_csv(\"./data/preprocessed_tweets_with_for_age_pred.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2bd7dfe9-a6cf-4dd8-a52a-fb3867629928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age_df = pd.read_csv('./data/preprocessed_tweets_with_for_age_pred.csv', lineterminator='\\n')\n",
+    "\n",
+    "age_dict = {}\n",
+    "age_dict['text'] = age_df['0'].to_list()\n",
+    "age_dict['label'] = age_df['human.labeled.age'].to_list() * 100\n",
+    "age_dict['screen_name'] = age_df['screen_name'].to_list() * 100\n",
+    "\n",
+    "for col in range(1, 100):\n",
+    "    age_dict['text'] += age_df[str(col)].to_list()\n",
+    "\n",
+    "age_df = pd.DataFrame.from_dict(age_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1e2835b0-eb59-46fd-b401-b83572876d98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    60674\n",
+      "0    36115\n",
+      "Name: label, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "age_df.dropna(subset=['text'], inplace=True)\n",
+    "str_ls = []\n",
+    "for s in age_df['text']:\n",
+    "    temp = re.sub('None', '', s)\n",
+    "    str_ls.append(temp)\n",
+    "    \n",
+    "age_df['text'] = str_ls\n",
+    "\n",
+    "age_df['text'] = age_df['text'].replace(r'^\\s*$', np.NaN, regex=True)\n",
+    "\n",
+    "age_df['text'].isna().sum()\n",
+    "age_df.dropna(subset=['text'], inplace=True)\n",
+    "print(age_df['label'].value_counts())\n",
+    "\n",
+    "age_df.to_csv('./data/preprocessed_tweets_with_for_age_pred.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bd7dfe9-a6cf-4dd8-a52a-fb3867629928",
+   "id": "2bf36b0d-a46a-4899-b480-08518ed34bd2",
    "metadata": {},
    "outputs": [],
    "source": []
