logistic regession for 4 label in race

--- a/bert_age.ipynb
+++ b/bert_age.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "id": "f423886f-9ed3-4c25-a8f3-fbd22d328e61",
    "metadata": {
     "id": "f423886f-9ed3-4c25-a8f3-fbd22d328e61"
@@ -228,6 +228,27 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "from transformers import AutoModel, BertTokenizerFast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "3d611025-d3cb-49d3-a8a6-85ba8339ef33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.10.0'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.__version__"
    ]
   },
   {
