fix word2vec with logisticRegression

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1682,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "fad2d920-2e48-4cd0-b145-e14e4a3e2779",
    "metadata": {},
    "outputs": [
@@ -1697,7 +1697,7 @@
        "      dtype='object', length=104)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1710,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "cb99848c",
    "metadata": {},
    "outputs": [],
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "aa395c38-448a-463d-a133-c4528527404f",
    "metadata": {},
    "outputs": [],
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "8763c7f6-ec87-4fba-b0d9-cb9c03edf8ec",
    "metadata": {},
    "outputs": [
@@ -1760,7 +1760,7 @@
        "289119"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "f1376214-3b42-4d63-adcb-459ad6c378df",
    "metadata": {},
    "outputs": [
@@ -1804,7 +1804,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "55bd723f-b4e7-4273-b69a-c31a022da6ca",
    "metadata": {},
    "outputs": [
@@ -1825,7 +1825,7 @@
        "276037"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1840,8 +1840,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ae5828a-f139-4a95-94db-0ecebbac178b",
+   "metadata": {},
+   "source": [
+    "#### label formatting \n",
+    "change \n",
+    "\n",
+    "1: Black, 2: Latino/Hspanic, 3: Asian, 4: White to\n",
+    "\n",
+    "0 White， 1 Black， 2 Asian， 3 Latino/Hispanic"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
+   "id": "8751a14a-9a31-442d-b5ba-dbfd64be5786",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0    224287\n",
+       "1.0     26269\n",
+       "3.0     16292\n",
+       "2.0      9189\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# race_df.loc[:, 'label'] = np.where(\n",
+    "#    (race_df['label'] == 4), 0, race_df['label']\n",
+    "#    )\n",
+    "\n",
+    "# race_df.loc[:, 'label'] = np.where(\n",
+    "#    (race_df['label'] == 2), 5, race_df['label']\n",
+    "#    )\n",
+    "\n",
+    "# race_df.loc[:, 'label'] = np.where(\n",
+    "#    (race_df['label'] == 3), 2, race_df['label']\n",
+    "#    )\n",
+    "\n",
+    "# race_df.loc[:, 'label'] = np.where(\n",
+    "#    (race_df['label'] == 5), 3, race_df['label']\n",
+    "#    )\n",
+    "\n",
+    "# race_df['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "c66c5ab6-d82f-4e74-a003-ededafc49f1f",
    "metadata": {},
    "outputs": [],
