changed format of race prediction result file

--- a/race_prediction_image/CreatPredictRaceCSV.ipynb
+++ b/race_prediction_image/CreatPredictRaceCSV.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "6  ./data/cropped/60153.jpeg  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "10  <PIL.Image.Image image mode=RGB size=160x160 a...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\zhouy\\AppData\\Local\\Temp/ipykernel_13252/2642461197.py:15: DeprecationWarning: an integer is required (got type float).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
+      "C:\\Users\\zhouy\\AppData\\Local\\Temp/ipykernel_1744/2642461197.py:15: DeprecationWarning: an integer is required (got type float).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
       "  return self.transform(self.x[index]),torch.tensor(self.y[index],dtype=torch.long)\n"
      ]
     }
@@ -365,20 +365,119 @@
     "dataloader = torch.utils.data.DataLoader(totalset,batch_size=32,num_workers=workers,shuffle=False)\n",
     "resnet.eval()\n",
     "total_pred = []\n",
+    "total_prob = pd.DataFrame()\n",
     "total_y = []\n",
     "for i, (x,y) in enumerate(dataloader):\n",
     "    x = x.to(device)\n",
     "    preds = resnet(x)\n",
     "    _, pred_y = torch.max(preds,1)\n",
+    "    preds = preds.detach().cpu().numpy()\n",
+    "    prob = pd.DataFrame()\n",
+    "    prob[0] = preds[:,0]\n",
+    "    prob[1] = preds[:,1]\n",
+    "    prob[2] = preds[:,3]\n",
+    "    prob[3] = preds[:,2]\n",
     "    pred_y = pred_y.detach().cpu().numpy().tolist()\n",
     "    y = y.detach().cpu().numpy().tolist()\n",
+    "    total_prob = pd.concat([total_prob,prob])\n",
     "    total_pred += pred_y\n",
     "    total_y += y\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.204718</td>\n",
+       "      <td>-1.788146</td>\n",
+       "      <td>0.308982</td>\n",
+       "      <td>1.711257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.180855</td>\n",
+       "      <td>-0.374976</td>\n",
+       "      <td>-0.254783</td>\n",
+       "      <td>0.628443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.111324</td>\n",
+       "      <td>-1.151877</td>\n",
+       "      <td>-0.386586</td>\n",
+       "      <td>-0.239070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.324256</td>\n",
+       "      <td>-0.411449</td>\n",
+       "      <td>-0.537727</td>\n",
+       "      <td>0.646304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-2.663526</td>\n",
+       "      <td>0.031439</td>\n",
+       "      <td>1.212305</td>\n",
+       "      <td>0.590142</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3\n",
+       "0 -0.204718 -1.788146  0.308982  1.711257\n",
+       "1 -0.180855 -0.374976 -0.254783  0.628443\n",
+       "2  2.111324 -1.151877 -0.386586 -0.239070\n",
+       "3  0.324256 -0.411449 -0.537727  0.646304\n",
+       "4 -2.663526  0.031439  1.212305  0.590142"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_prob.columns=['0','1','2','3']\n",
+    "total_prob.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +588,7 @@
        "10  <PIL.Image.Image image mode=RGB size=160x160 a...          3  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -641,18 +740,18 @@
        "10  <PIL.Image.Image image mode=RGB size=160x160 a...          3  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()\n"
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +862,7 @@
        "10  <PIL.Image.Image image mode=RGB size=160x160 a...          2  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +971,7 @@
        "4  755531.0        0.0     1982.0   4.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +984,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>race</th>\n",
+       "      <th>img_path</th>\n",
+       "      <th>absolute_img_path</th>\n",
+       "      <th>cropped_path</th>\n",
+       "      <th>face</th>\n",
+       "      <th>pred_race</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>811618.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>profile pics/60152.jpeg</td>\n",
+       "      <td>./data/profile pics/60152.jpeg</td>\n",
+       "      <td>./data/cropped/60152.jpeg</td>\n",
+       "      <td>&lt;PIL.Image.Image image mode=RGB size=160x160 a...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.204718</td>\n",
+       "      <td>-1.788146</td>\n",
+       "      <td>0.308982</td>\n",
+       "      <td>1.711257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>865071.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>profile pics/60154.jpeg</td>\n",
+       "      <td>./data/profile pics/60154.jpeg</td>\n",
+       "      <td>./data/cropped/60154.jpeg</td>\n",
+       "      <td>&lt;PIL.Image.Image image mode=RGB size=160x160 a...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.180855</td>\n",
+       "      <td>-0.374976</td>\n",
+       "      <td>-0.254783</td>\n",
+       "      <td>0.628443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>988211.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>profile pics/60155.jpeg</td>\n",
+       "      <td>./data/profile pics/60155.jpeg</td>\n",
+       "      <td>./data/cropped/60155.jpeg</td>\n",
+       "      <td>&lt;PIL.Image.Image image mode=RGB size=160x160 a...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.111324</td>\n",
+       "      <td>-1.151877</td>\n",
+       "      <td>-0.386586</td>\n",
+       "      <td>-0.239070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1025311.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>profile pics/60156.jpeg</td>\n",
+       "      <td>./data/profile pics/60156.jpeg</td>\n",
+       "      <td>./data/cropped/60156.jpeg</td>\n",
+       "      <td>&lt;PIL.Image.Image image mode=RGB size=160x160 a...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.324256</td>\n",
+       "      <td>-0.411449</td>\n",
+       "      <td>-0.537727</td>\n",
+       "      <td>0.646304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1143891.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>profile pics/60157.jpeg</td>\n",
+       "      <td>./data/profile pics/60157.jpeg</td>\n",
+       "      <td>./data/cropped/60157.jpeg</td>\n",
+       "      <td>&lt;PIL.Image.Image image mode=RGB size=160x160 a...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-2.663526</td>\n",
+       "      <td>0.031439</td>\n",
+       "      <td>1.212305</td>\n",
+       "      <td>0.590142</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id  race                 img_path               absolute_img_path  \\\n",
+       "0   811618.0   2.0  profile pics/60152.jpeg  ./data/profile pics/60152.jpeg   \n",
+       "1   865071.0   0.0  profile pics/60154.jpeg  ./data/profile pics/60154.jpeg   \n",
+       "2   988211.0   0.0  profile pics/60155.jpeg  ./data/profile pics/60155.jpeg   \n",
+       "3  1025311.0   0.0  profile pics/60156.jpeg  ./data/profile pics/60156.jpeg   \n",
+       "4  1143891.0   2.0  profile pics/60157.jpeg  ./data/profile pics/60157.jpeg   \n",
+       "\n",
+       "                cropped_path  \\\n",
+       "0  ./data/cropped/60152.jpeg   \n",
+       "1  ./data/cropped/60154.jpeg   \n",
+       "2  ./data/cropped/60155.jpeg   \n",
+       "3  ./data/cropped/60156.jpeg   \n",
+       "4  ./data/cropped/60157.jpeg   \n",
+       "\n",
+       "                                                face  pred_race         0  \\\n",
+       "0  <PIL.Image.Image image mode=RGB size=160x160 a...          3 -0.204718   \n",
+       "1  <PIL.Image.Image image mode=RGB size=160x160 a...          3 -0.180855   \n",
+       "2  <PIL.Image.Image image mode=RGB size=160x160 a...          0  2.111324   \n",
+       "3  <PIL.Image.Image image mode=RGB size=160x160 a...          3  0.324256   \n",
+       "4  <PIL.Image.Image image mode=RGB size=160x160 a...          2 -2.663526   \n",
+       "\n",
+       "          1         2         3  \n",
+       "0 -1.788146  0.308982  1.711257  \n",
+       "1 -0.374976 -0.254783  0.628443  \n",
+       "2 -1.151877 -0.386586 -0.239070  \n",
+       "3 -0.411449 -0.537727  0.646304  \n",
+       "4  0.031439  1.212305  0.590142  "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "changeName = changeName.reset_index(drop=True)\n",
+    "total_prob = total_prob.reset_index(drop=True)\n",
+    "changeName = pd.concat([changeName,total_prob],axis=1,join='inner')\n",
+    "changeName.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -894,20 +1149,20 @@
        "(4132, 2)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = changeName[['id','pred_race']].copy()\n",
+    "A = changeName[['id','0','1','2','3']].copy()\n",
     "B = df_users[['user_id','race']].copy()\n",
     "B.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +1188,10 @@
        "      <th></th>\n",
        "      <th>user_id</th>\n",
        "      <th>race</th>\n",
-       "      <th>pred_race</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -942,11 +1200,17 @@
        "      <td>12488.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>719703.0</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -954,11 +1218,17 @@
        "      <td>722153.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>749003.0</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -966,21 +1236,24 @@
        "      <td>755531.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    user_id  race  pred_race\n",
-       "0   12488.0   4.0        NaN\n",
-       "1  719703.0   4.0        NaN\n",
-       "2  722153.0   3.0        NaN\n",
-       "3  749003.0   5.0        NaN\n",
-       "4  755531.0   4.0        NaN"
+       "    user_id  race   0   1   2   3\n",
+       "0   12488.0   4.0 NaN NaN NaN NaN\n",
+       "1  719703.0   4.0 NaN NaN NaN NaN\n",
+       "2  722153.0   3.0 NaN NaN NaN NaN\n",
+       "3  749003.0   5.0 NaN NaN NaN NaN\n",
+       "4  755531.0   4.0 NaN NaN NaN NaN"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
