--- a/age_prediction_image/custom_resnet34.ipynb
+++ b/age_prediction_image/custom_resnet34.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "source": [
     "# Building and Training our own ResNet34 model\n",
     "\n",
@@ -470,9 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -529,9 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -1114,7 +1108,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1128,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
